--- a/karaoke/build.gradle
+++ b/karaoke/build.gradle
@@ -65,6 +65,7 @@ android {
             buildConfigField "String", "BASE_URL", '"https://skymusic.com.vn/api/"'
             buildConfigField "String", "HOST", '"identify-ap-southeast-1.acrcloud.com"'
             buildConfigField "String", "ACCESS_KEY", '"c5f8665809ec9f785424fb1b837ac283"'
+            buildConfigField "String", "OP", '"1"'
             buildConfigField "String", "ACCESS_SECRET", '"JOfSDjCUb7ITdQK9JHykSVIqPmJeFM3RLc6RgSzY"'
             buildConfigField "String", "CLIENT_KEY", '"kct171101"'
             buildConfigField "String", "CLIENT_SECRET", '"e4d5962539f7a6fa691e1cfb81b73cf3"'
@@ -74,6 +75,7 @@ android {
             buildConfigField "String", "BASE_URL", '"https://skymusic.com.vn/api/"'
             buildConfigField "String", "HOST", '"identify-ap-southeast-1.acrcloud.com"'
             buildConfigField "String", "ACCESS_KEY", '"c5f8665809ec9f785424fb1b837ac283"'
+            buildConfigField "String", "OP", '"1"'
             buildConfigField "String", "ACCESS_SECRET", '"JOfSDjCUb7ITdQK9JHykSVIqPmJeFM3RLc6RgSzY"'
             buildConfigField "String", "CLIENT_KEY", '"kct171101"'
             buildConfigField "String", "CLIENT_SECRET", '"e4d5962539f7a6fa691e1cfb81b73cf3"'
