--- a/karaoke/src/main/AndroidManifest.xml
+++ b/karaoke/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".service.RecoderService"/>
+        <service android:name=".service.RecoderService"
+            android:process="RecoderService"/>
     </application>
 
 </manifest>
